 - (dtucker) [configure.ac] strsep() may be defined in string.h, so check
   for its presence and include it in the strsep check.
 - (dtucker) [configure.ac] getpgrp may be defined in unistd.h, so check for
   its presence before doing AC_FUNC_GETPGRP.
 - (dtucker) [configure.ac] Merge HP-UX blocks into a common block with minor
   version-specific variations as required.

20050527
 - (djm) [defines.h] Use our realpath if we have to define PATH_MAX, spotted by
   David Leach; ok dtucker@
 - (dtucker) [acconfig.h configure.ac defines.h includes.h sshpty.c
   openbsd-compat/bsd-misc.c] Add support for Ultrix.  No, that's not a typo.
   Required changes from Bernhard Simon, integrated by me.  ok djm@

20050525
 - (djm) [mpaux.c mpaux.h Makefile.in] Remove old mpaux.[ch] code, it has not 
   been used for a while
 - (djm) OpenBSD CVS Sync
   - otto@cvs.openbsd.org 2005/04/05 13:45:31
     [ssh-keygen.c]
   - djm@cvs.openbsd.org 2005/04/06 09:43:59
     [sshd.c]
     avoid harmless logspam by not performing setsockopt() on non-socket;
     ok markus@
   - dtucker@cvs.openbsd.org 2005/04/06 12:26:06
     [ssh.c]
     Fix debug call for port forwards; patch from pete at seebeyond.com,
     ok djm@ (ID sync only - change already in portable)
   - djm@cvs.openbsd.org 2005/04/09 04:32:54
     [misc.c misc.h tildexpand.c Makefile.in]
     replace tilde_expand_filename with a simpler implementation, ahead of
     more whacking; ok deraadt@
   - jmc@cvs.openbsd.org 2005/04/14 12:30:30
     [ssh.1]
     arg to -b is an address, not if_name;
     ok markus@
   - jakob@cvs.openbsd.org 2005/04/20 10:05:45
     [dns.c]
     do not try to look up SSHFP for numerical hostname. ok djm@
   - djm@cvs.openbsd.org 2005/04/21 06:17:50
     [ssh-add.1 ssh-agent.1 ssh-keygen.1 ssh.1 ssh_config.5 sshd.8]
     [sshd_config.5] OpenSSH doesn't ever look at the $HOME environment
     variable, so don't say that we do (bz #623); ok deraadt@
   - djm@cvs.openbsd.org 2005/04/21 11:47:19
     [ssh.c]