@@ -7,6 +7,9 @@
    its presence before doing AC_FUNC_GETPGRP.
  - (dtucker) [configure.ac] Merge HP-UX blocks into a common block with minor
    version-specific variations as required.
+ - (dtucker) [openbsd-compat/port-aix.h] Use the HAVE_DECL_* definitions as
+   per the autoconf man page.  Configure should always define them but it
+   doesn't hurt to check.
 
 20050527
  - (djm) [defines.h] Use our realpath if we have to define PATH_MAX, spotted by
@@ -2625,4 +2628,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3796 2005/05/28 08:31:42 dtucker Exp $
+$Id: ChangeLog,v 1.3797 2005/05/28 10:28:39 dtucker Exp $
